# circle-camera

./: .env.example  .gitignore  CHANGELOG.md  README.md  icon.pxd  latest.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  release.yml  validate.yml
circle-camera/: README.md  package.json
circle-camera/src/: App.vue
circle-camera/src-tauri/: Info.plist  tauri.conf.json
circle-camera/src-tauri/capabilities/: default.json
dev-docs/: release-process.md  update-system.md
docs/: documentation.md  download.md  faq.md  features.md  index.md  troubleshooting.md
docs/.vitepress/: config.js
docs/.vitepress/theme/: custom.css  index.js
scripts/: generate-update-json.js  release.sh  serve-update.js  update-changelog.sh
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BrandingBar.vue  ColorPickerOverlay.vue  ControlsDropdown.vue  MenuBar.vue  SettingsOverlay.vue  UpdateChecker.vue  UpdateOverlay.vue  WebcamCircle.vue  WebcamContainer.vue  WindowControls.vue
src/components/icons/: IconLibrary.vue
src/utils/: cameraUtils.ts  windowUtils.ts
website/: app.vue  content.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
website/components/: Accordion.vue  AccordionItem.vue  ThemeToggle.vue
website/layouts/: default.vue
website/pages/: index.vue
website/plugins/: theme.client.ts
(+10 files in other folders)
